apps/kuma/kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: kuma
spec:
  selector:
    app: uptime-kuma
  ports:
  - name: web
    port: 3001
    targetPort: 3001
